# cwm-minio-api

./: Dockerfile  Dockerfile.locust  LICENSE  README.md  compose.yaml  docker_entrypoint.sh  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci-locust.yaml  ci.yaml
cwm_minio_api/: access_keys.py  app.py  cli.py  common.py  config.py  db.py  router.py
cwm_minio_api/buckets/: api.py  cli.py  router.py
cwm_minio_api/buckets/reports/: api.py  cli.py
cwm_minio_api/credentials/: api.py  router.py
cwm_minio_api/instances/: api.py  cli.py  router.py
cwm_minio_api/load_tests/: cleanup.py  cli.py  config.py  locustfile.py  shared_state.py
cwm_minio_api/load_tests/users/: base.py  getgetter.py  updowndel.py  uploader_downloader.py
cwm_minio_api/metrics/: prometheus.py  router.py
cwm_minio_api/minio/: api.py
cwm_minio_api/tenant/: router.py
migrations/: 20250805064704_instances.up.sql  20250805071311_buckets.up.sql  20250820124638_remove_max_size_add_blocked.up.sql  20250929050037_credentials_refactor.up.sql  20260405120000_credentials_table.down.sql  20260405120000_credentials_table.up.sql
tests/: conftest.py  test_access_keys.py  test_buckets_api.py  test_credentials_api.py  test_e2e.py  test_instances_api.py  test_minio_failures.py
