[project]
name = "cwm-minio-api"
version = "0.1.0"
description = "CWM MinIO API"
requires-python = ">=3.12"
dependencies = [
    "asyncclick>=8.1.8",
    "click>=8.2.1",
    "fastapi[standard]>=0.116.1",
    "orjson>=3.11.1",
    "psycopg[binary,pool]>=3.2.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "uvicorn-worker>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cwm-minio-api = "cwm_minio_api.cli:main"

[project.optional-dependencies]
load-test = [
    "locust>=2.43.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
